--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "angular": "^1.2.19",
+    "angular-animate": "^1.2.19",
     "bootstrap": "^3.2.0"
   }
 }
