--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "angular": "^1.2.19",
     "angular-animate": "^1.2.19",
-    "bootstrap": "^3.2.0"
+    "bootstrap": "^3.2.0",
+    "class.js": "^1.0.0"
   }
 }
