--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "tests-angularjs",
   "version": "0.0.1",
   "description": "Tests d'AngularJS",
-  "main": "gulpfile.js",
   "dependencies": {},
   "devDependencies": {
-    "express": "^4.4.5",
-    "gulp": "^3.8.5",
-    "gulp-bower": "^0.0.6"
+    "express": "^4.4.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
