--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "tests-angularjs",
   "version": "0.0.1",
   "authors": [
-    "Pierre Gentile <pierre.gentile.perso@gmail.com>"
+    "Pierre Gentile"
   ],
   "description": "Tests d'AngularJS",
   "license": "MIT",
