--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Tests d'AngularJS",
   "dependencies": {},
   "devDependencies": {
-    "express": "^4.4.5"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "express": "^4.4.5",
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "^0.10.0"
   },
   "author": "Pierre Gentile",
-  "license": "MIT"
+  "license": "MIT",
+  "private": true
 }
