--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "Tests d'AngularJS",
   "dependencies": {},
   "devDependencies": {
-    "express": "^4.4.5",
     "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "^0.10.0"
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "time-grunt": "^0.4.0"
   },
   "author": "Pierre Gentile",
   "license": "MIT",
