--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.5.1",
     "time-grunt": "^0.4.0"
   },
   "author": "Pierre Gentile",
