--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-protractor-runner": "^1.1.1",
     "time-grunt": "^0.4.0"
   },
   "author": "Pierre Gentile",
