--- a/bower.json
+++ b/bower.json
@@ -15,5 +15,8 @@
     "flot": "^0.8.3",
     "bootstrap": "^3.2.0",
     "class.js": "^1.0.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.23"
   }
 }
