--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-karma": "^0.8.3",
     "grunt-protractor-runner": "^1.1.1",
+    "karma": "^0.12.22",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-jasmine": "^0.1.5",
     "time-grunt": "^0.4.0"
   },
   "author": "Pierre Gentile",
