--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,7 @@
     "angular-route": "^1.2.19",
     "d3": "^3.4.11",
     "flot": "^0.8.3",
-    "bootstrap": "^3.2.0",
-    "class.js": "^1.0.0"
+    "bootstrap": "^3.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.23"
