--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "bootstrap": "^3.2.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.23"
+    "angular-mocks": "~1.2.23",
+    "jasmine-jquery": "~2.0.5"
   }
 }
