--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-imagemin": "^0.8.1",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "^0.8.3",
+    "grunt-newer": "^0.7.0",
     "grunt-protractor-runner": "^1.1.1",
     "karma": "^0.12.22",
     "karma-chrome-launcher": "^0.1.4",
