--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "karma-chrome-launcher": "^0.1.4",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.2.0",
+    "load-grunt-tasks": "^0.6.0",
     "time-grunt": "^0.4.0"
   },
   "author": "Pierre Gentile",
