--- a/bower.json
+++ b/bower.json
@@ -8,15 +8,15 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "angular": "^1.2.19",
-    "angular-animate": "^1.2.19",
-    "angular-route": "^1.2.19",
+    "angular": "^1.3",
+    "angular-animate": "^1.3",
+    "angular-route": "^1.3",
     "d3": "^3.4.11",
     "flot": "^0.8.3",
     "bootstrap": "^3.2.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.23",
+    "angular-mocks": "^1.3",
     "jasmine-jquery": "~2.0.5"
   }
 }
