--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Tests d'AngularJS",
   "dependencies": {},
   "devDependencies": {
+    "connect-livereload": "^0.4.0",
     "grunt": "~0.4.5",
     "grunt-autoprefixer": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
