--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "dependencies": {},
   "devDependencies": {
     "connect-livereload": "^0.4.0",
-    "grunt": "~0.4.5",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.8.0",
-    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-imagemin": "^0.8.1",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-less": "^0.11.4",
-    "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-karma": "^0.8.3",
+    "grunt-karma": "^0.9.0",
     "grunt-newer": "^0.7.0",
     "grunt-protractor-runner": "^1.1.1",
     "karma": "^0.12.22",
@@ -24,7 +24,7 @@
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.2.0",
     "load-grunt-tasks": "^0.6.0",
-    "time-grunt": "^0.4.0"
+    "time-grunt": "^1.0.0"
   },
   "author": "Pierre Gentile",
   "license": "MIT",
