--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Tests d'AngularJS",
   "dependencies": {},
   "devDependencies": {
+    "connect-gzip-static": "^0.4.0",
     "connect-livereload": "^0.4.0",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-compress": "^0.12.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-htmlmin": "^0.3.0",
