--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "angular-mocks": "^1.3",
-    "jasmine-jquery": "~2.0.5"
+    "jasmine-jquery": "~2.0.5",
+    "bootswatch": "~3.2.0+4"
   }
 }
