--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,6 @@
   "devDependencies": {
     "angular-mocks": "^1.3",
     "jasmine-jquery": "~2.0.5",
-    "bootswatch": "~3.2.0+4"
+    "bootswatch": "~3.2.0"
   }
 }
