--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "connect-livereload": "^0.4.0",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^1.0.0",
+    "grunt-bootlint": "^0.5.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compress": "^0.12.0",
     "grunt-contrib-connect": "^0.8.0",
