--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-route": "^1.3",
     "d3": "^3.4.11",
     "flot": "^0.8.3",
-    "bootstrap": "^3.3.0"
+    "bootstrap": "^3.3.0",
+    "moment": "^2.8.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3",
