--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular": "^1.3",
     "angular-animate": "^1.3",
     "angular-route": "^1.3",
+    "angular-resource": "^1.3",
     "d3": "^3.5.0",
     "flot": "^0.8.3",
     "bootstrap": "^3.3.0",
