--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-animate": "^1.3",
     "angular-route": "^1.3",
     "angular-resource": "^1.3",
+    "ng-file-upload": "^3.2",
     "d3": "^3.5.0",
     "flot": "^0.8.3",
     "bootstrap": "^3.3.0",
