--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-bootlint": "^0.5.3",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compress": "^0.12.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-htmlmin": "^0.3.0",
