--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ node_js:
 
 before_script:
   - node node_modules/grunt-protractor-runner/scripts/webdriver-manager-update
+  - npm install -q bower
   - bower install
 
 script:
